finish to get card in profile

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="image" src="https://firebasestorage.googleapis.com/v0/b/get-sweety.appspot.com/o/recipes%2Flemon-lime-pound-cake-sl-x.jpg?alt=media&token=19af7cd1-6855-45b6-93e8-1a0e7fb2060e">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
